infrastructure/network/istio-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-operator-managed: Reconcile
    istio-injection: disabled
