infrastructure/network/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "airy-core"
  namespace: default
spec:
  rules:
    - host: "api.airy"
      http:
        paths:
          - path: /users.login
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 80
          - path: /users.signup
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 80
          - path: /users.accept-invitation
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 80
          - path: /users.request-password-reset
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 80
          - path: /users.password-reset
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 80
          - path: /users.invite
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 80
          - path: /conversations.list
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /conversations.info
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /conversations.read
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /conversations.tag
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /conversations.untag
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /messages.list
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /messages.send
            pathType: Prefix
            backend:
              service:
                name: api-communication
                port:
                  number: 80
          - path: /channels.list
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /channels.disconnect
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /channels.explore
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /channels.connect
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /webhooks.subscribe
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /webhooks.unsubscribe
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /webhooks.info
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /tags.create
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /tags.update
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /tags.list
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
          - path: /tags.delete
            pathType: Prefix
            backend:
              service:
                name: api-admin
                port:
                  number: 80
    - host: "demo.airy"
      http:
        paths:
          - path: /
            backend:
              service:
                name: frontend-demo
                port:
                  number: 80
    - host: "chatplugin.airy"
      http:
        paths:
          - path: /chatplugin.authenticate
            pathType: Prefix
            backend:
              service:
                name: sources-chatplugin
                port:
                  number: 80
          - path: /chatplugin.send
            pathType: Prefix
            backend:
              service:
                name: sources-chatplugin
                port:
                  number: 80
          - path: /
            backend:
              service:
                name: frontend-chat-plugin
                port:
                  number: 80
