infrastructure/network/istio-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: airy-core
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: auth
spec:
    hosts:
    - "*"
    gateways:
    - airy-core
    http:
    - match:
      - uri:
          prefix: /users.login
      - uri: 
          prefix: /users.signup
      - uri:
          prefix: /users.accept-invitation
      - uri:
          prefix: /users.request-password-reset
      - uri:
          prefix: /users.password-reset
      - uri:
          prefix: /users.invite
      route:
      - destination:
          host: api-auth
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: communication
spec:
    hosts:
    - "*"
    gateways:
    - airy-core
    http:
    - match:
      - uri:
          prefix: /conversations.list
      - uri:
          prefix: /conversations.by_id
      - uri:
          prefix: /conversations.mark-read
      - uri:
          prefix: /conversations.messages-list
      - uri:
          prefix: /conversations.send
      route:
      - destination:
          host: api-communication
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: admin
spec:
    hosts:
    - "*"
    gateways:
    - airy-core
    http:
    - match:
      - uri:
          prefix: /channels.connect
      - uri:
          prefix: /channels.disconnect
      - uri:
          prefix: /channels.available
      - uri:
          prefix: /channels.connected
      - uri:
          prefix: /webhooks.subscribe
      - uri:
          prefix: /webhooks.unsubscribe
      - uri:
          prefix: /webhooks.get
      route:
      - destination:
          host: api-admin
          port:
            number: 80
